Fixed namespaced classes and removed overflow hidden on root element

--- a/jquery.highlighttextarea.css
+++ b/jquery.highlighttextarea.css
@@ -6,14 +6,13 @@
 
 .highlightTextarea {
   position:relative;
-  overflow:hidden;
 }
-.highlightTextarea .container {
+.highlightTextarea .highlightTextarea-container {
   position:absolute;
   margin:0;
   overflow:hidden;
 }
-.highlightTextarea .highlighter {
+.highlightTextarea .highlightTextarea-highlighter {
   position:relative;
   border:none;
   padding:0;
@@ -24,7 +23,7 @@
   white-space:pre-wrap;
   word-wrap:break-word;
 }
-  .highlightTextarea.debug .highlighter {
+  .highlightTextarea.debug .highlightTextarea-highlighter {
     color:#f00;
     border:1px solid #f00;
     margin:-1px;
